--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "DiskANN-build/DiskANN"]
 	path = DiskANN-build/DiskANN
-	url = git@github.com:yichuan-w/DiskANN.git
+	url = git@github.com:Berkeley-Large-RAG/DiskANN.git
